--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -1,5 +1,118 @@
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-top: 36px;
+  padding-left: 156px;
+  gap: 32px;
+}
+
+.calendar {
+  display: flex;
+  gap: 8px;
+  flex-direction: row;
+}
+
+input#datetime-picker.flatpickr-input {
+  width: 240px;
+  height: 40px;
+  border-radius: 4px;
+  background: #fff;
+  padding: 0px 16px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+
+  color: #2e2f42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
+}
+
+input#datetime-picker.flatpickr-input:hover {
+  border-radius: 4px;
+  background: #fff;
+  cursor: pointer;
+}
+
+input#datetime-picker.flatpickr-input:focus {
+  border: 1px solid #4e75ff;
+  outline: none;
+  box-shadow: 0 0 4px rgba(78, 117, 255, 0.5);
+}
+input#datetime-picker.flatpickr-input:disabled {
+  border-radius: 4px;
+  background: #fafafa;
+}
+span.flatpickr-day.today.selected {
+  color: black;
+  background-color: #fff;
+}
+span.flatpickr-day.selected {
+  background-color: #4e75ff;
+}
+span.flatpickr-day:hover {
+  background-color: #c1c1c1;
+}
+
+button {
+  display: inline-flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  background: #4e75ff;
+  border: none;
+
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
+}
+
+button:hover {
+  background: #6c8cff;
+}
+
 button:disabled {
   background-color: lightgray;
   color: gray;
   cursor: not-allowed;
+  color: #989898;
+}
+
+.timer {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  color: #2e2f42;
+  font-family: Montserrat sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 48px; /* 120% */
+  letter-spacing: 1.6px;
+}
+.label {
+  color: #2e2f42;
+  font-family: Montserrat sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
 }
